--- a/FPcache/FPcache.vcxproj.filters
+++ b/FPcache/FPcache.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="cache.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="utility.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="fpcache.hpp">
@@ -51,6 +54,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="cache.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="util.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
