--- a/FPcache/FPcache.vcxproj.filters
+++ b/FPcache/FPcache.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="utility.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="ARCCache.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="fpcache.hpp">
@@ -57,6 +60,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="util.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="ARCCache.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
