--- a/FPcache/FPcache.vcxproj.filters
+++ b/FPcache/FPcache.vcxproj.filters
@@ -65,5 +65,8 @@
     <ClInclude Include="ARCCache.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="common.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
