--- a/.gitignore
+++ b/.gitignore
@@ -264,3 +264,30 @@ __pycache__/
 /FPcache/m1000_R01_r1000_s0008_a17.csv
 /FPcache/type1_t32_fp_H2_U8_m1000_R01_r1000_s0008_a07.csv
 /FPcache/type1_t64_sk_H2_U8_m1000_R01_r400_s0008_a17.csv
+/FPcache/pattern_t64_stay110_R01_a12_m1000_n005_o095_kosarakdat_r33554432_s0008_type3.csv
+/FPcache/pattern_t64_stay110_R01_a07_m1000_n05_o05_r16777216_s0008_type3.csv
+/FPcache/pattern_t64_stay110_R01_a07_m1000_n02_o08_r16777216_s0008_type3.csv
+/FPcache/pattern_t64_stay110_R01_a07_m1000_n02_o08_r16777216_s0006_type3.csv
+/FPcache/pattern_t64_stay110_R01_a07_m1000_n01_o09_r16777216_s0008_type3.csv
+/FPcache/patens_Temporal_pattern_t64_stay110_R01_a12_m1000_n005_o095_kosarakdat_r33554432_s0008_type3.csv
+/FPcache/patens_Spatial_pattern_t64_stay110_R01_a12_m1000_n005_o095_kosarakdat_r33554432_s0008_type3.csv
+/FPcache/patens_pattern_t64_stay110_R01_a07_m1000_n05_o05_r16777216_s0008_type3.csv
+/FPcache/patens_pattern_t64_stay110_R01_a07_m1000_n035_o065_r16777216_s0008_type3.csv
+/FPcache/patens_pattern_t64_stay110_R01_a07_m1000_n02_o08_r16777216_s0008_type3.csv
+/FPcache/patens_pattern_t64_stay110_R01_a07_m1000_n02_o08_r16777216_s0006_type3.csv
+/FPcache/patens_pattern_t64_stay110_R01_a07_m1000_n01_o09_r16777216_s0008_type3.csv
+/FPcache/notpatens_Temporal_pattern_t64_stay110_R01_a12_m1000_n005_o095_kosarakdat_r33554432_s0008_type3.csv
+/FPcache/notpatens_Spatial_pattern_t64_stay110_R01_a12_m1000_n005_o095_kosarakdat_r33554432_s0008_type3.csv
+/FPcache/notpatens_pattern_t64_stay110_R01_a07_m1000_n05_o05_r16777216_s0008_type3.csv
+/FPcache/notpatens_pattern_t64_stay110_R01_a07_m1000_n035_o065_r16777216_s0008_type3.csv
+/FPcache/notpatens_pattern_t64_stay110_R01_a07_m1000_n02_o08_r16777216_s0008_type3.csv
+/FPcache/notpatens_pattern_t64_stay110_R01_a07_m1000_n02_o08_r16777216_s0006_type3.csv
+/FPcache/notpatens_pattern_t64_stay110_R01_a07_m1000_n01_o09_r16777216_s0008_type3.csv
+/FPcache/skewtest_t64_stay110_H2_R01_U8_a12_m1000_n005_o095_kosarakdat_r8388608_s0008_type3.csv
+/FPcache/skewtest_t64_stay110_H2_R01_U8_a07_m1000_r67108864_s0008_type3.csv
+/FPcache/skewtest_t64_stay110_H2_R01_U8_a07_m1000_r2097152_s0008_type3.csv
+/FPcache/skewtest_t64_stay110_H2_R01_U8_a07_m1000_r2097152_s0008_type2.csv
+/FPcache/watch_pattern_t64_stay110_R01_a07_m1000_n05_o05_r16777216_s0008_type3.csv
+/FPcache/watch_pattern_t64_stay110_R01_a07_m1000_n02_o08_r16777216_s0008_type3.csv
+/FPcache/watch_pattern_t64_stay110_R01_a07_m1000_n02_o08_r16777216_s0006_type3.csv
+/FPcache/watch_pattern_t64_stay110_R01_a07_m1000_n01_o09_r16777216_s0008_type3.csv
