--- a/.gitignore
+++ b/.gitignore
@@ -291,3 +291,6 @@ __pycache__/
 /FPcache/watch_pattern_t64_stay110_R01_a07_m1000_n02_o08_r16777216_s0008_type3.csv
 /FPcache/watch_pattern_t64_stay110_R01_a07_m1000_n02_o08_r16777216_s0006_type3.csv
 /FPcache/watch_pattern_t64_stay110_R01_a07_m1000_n01_o09_r16777216_s0008_type3.csv
+/FPcache/pattern_t64_stay110_a12_n001_o099_r8388608_type2_ts5.csv
+/FPcache/patens_Acc_pattern_t64_stay110_a12_n001_o099_r8388608_type2_ts5.csv
+/FPcache/fpcache_t64_stay110_H2_R01_U8_a12_m1000_n012_o088_r8388608_s0008_type3_ts5.csv
