--- a/.gitignore
+++ b/.gitignore
@@ -294,3 +294,201 @@ __pycache__/
 /FPcache/pattern_t64_stay110_a12_n001_o099_r8388608_type2_ts5.csv
 /FPcache/patens_Acc_pattern_t64_stay110_a12_n001_o099_r8388608_type2_ts5.csv
 /FPcache/fpcache_t64_stay110_H2_R01_U8_a12_m1000_n012_o088_r8388608_s0008_type3_ts5.csv
+/FPcache/spy_Temporal_pattern_t64_stay110_R01_Trh06_a12_m100_n001_o099_webdocsdat_r8388608_s02_type2_ts1_Trh1.csv
+/FPcache/spy_Temporal_pattern_t64_stay110_R01_Trh01_a12_m100_n001_o099_webdocsdat_r8388608_s021_type2_ts1_Trh1.csv
+/FPcache/spy_Spatial_pattern_t64_stay110_R01_Trh06_a12_m100_n001_o099_webdocsdat_r8388608_s02_type2_ts1_Trh1.csv
+/FPcache/spy_Spatial_pattern_t64_stay110_R01_Trh01_a12_m100_n001_o099_webdocsdat_r8388608_s021_type2_ts1_Trh1.csv
+/FPcache/spyNot_Temporal_pattern_t64_stay110_R01_Trh06_a12_m100_n001_o099_webdocsdat_r8388608_s02_type2_ts1_Trh1.csv
+/FPcache/spyNot_Temporal_pattern_t64_stay110_R01_Trh01_a12_m100_n001_o099_webdocsdat_r8388608_s021_type2_ts1_Trh1.csv
+/FPcache/spyNot_Spatial_pattern_t64_stay110_R01_Trh06_a12_m100_n001_o099_webdocsdat_r8388608_s02_type2_ts1_Trh1.csv
+/FPcache/spyNot_Spatial_pattern_t64_stay110_R01_Trh01_a12_m100_n001_o099_webdocsdat_r8388608_s021_type2_ts1_Trh1.csv
+/FPcache/pumsb_star.dat
+/FPcache/pumsb.dat
+/FPcache/pattern_t64_stay110_R01_Trh06_a12_m100_n001_o099_webdocsdat_r8388608_s02_type2_ts1_Trh1.csv
+/FPcache/pattern_t64_stay110_R01_Trh02_a12_m1000_n001_o099_r8388608_s001_type2_ts1_Trh1.csv
+/FPcache/pattern_t64_stay110_R01_Trh01_a12_m100_n001_o099_workloaddat_r8388608_s01_type2_ts1_Trh1.csv
+/FPcache/pattern_t64_stay110_R01_Trh01_a12_m100_n001_o099_webdocsdat_r8388608_s021_type2_ts1_Trh1.csv
+/FPcache/pattern_t64_stay110_R01_Trh01_a12_m100_n001_o099_webdocsdat_r8388608_s01_type2_ts5_Trh5.csv
+/FPcache/pattern_t64_stay110_R01_Trh01_a12_m1000_n001_o099_workloaddat_r8388608_s0008_type2_ts1_Trh1.csv
+/FPcache/pattern_t64_stay110_R01_Trh01_a12_m1000_n001_o099_webdocsdat_r8388608_s02_type2_ts5_Trh5.csv
+/FPcache/pattern_t64_stay110_R01_Trh01_a12_m1000_n001_o099_webdocsdat_r8388608_s01_type2_ts5_Trh5.csv
+/FPcache/pattern_t64_stay110_R01_Trh01_a12_m1000_n001_o099_r8388608_s0008_type2_ts5_Trh5.csv
+/FPcache/pattern_t64_stay110_R01_Trh01_a12_m1000_n001_o099_kosarakdat_r8388608_s0008_type2_ts5_Trh5.csv
+/FPcache/pattern_t64_stay110_R01_Trh0001_Trh01_a12_m1000_n001_o099_pumsbdat_r4388608_s02_type2_ts5_Trh5.csv
+/FPcache/pattern_t64_stay110_R01_Trh0001_Trh01_a12_m1000_n001_o099_pumsbdat_r4388608_s004_type2_ts5_Trh5.csv
+/FPcache/pattern_t64_stay110_R01_Trh0001_Trh01_a12_m1000_n001_o099_pumsbdat_r4388608_s002_type2_ts5_Trh5.csv
+/FPcache/pattern_t64_stay110_a12_n02_o08_r8388608_s0008_type2_ts5.csv
+/FPcache/pattern_t64_stay110_a12_n001_o099_r8388608_s0008_type2_ts5.csv
+/FPcache/patens_Temporal_pattern_t64_stay110_R01_Trh06_a12_m100_n001_o099_webdocsdat_r8388608_s02_type2_ts1_Trh1.csv
+/FPcache/patens_Temporal_pattern_t64_stay110_R01_Trh02_a12_m1000_n001_o099_r8388608_s001_type2_ts1_Trh1.csv
+/FPcache/patens_Temporal_pattern_t64_stay110_R01_Trh01_a12_m100_n001_o099_workloaddat_r8388608_s01_type2_ts1_Trh1.csv
+/FPcache/patens_Temporal_pattern_t64_stay110_R01_Trh01_a12_m100_n001_o099_webdocsdat_r8388608_s021_type2_ts1_Trh1.csv
+/FPcache/patens_Temporal_pattern_t64_stay110_R01_Trh01_a12_m1000_n001_o099_workloaddat_r8388608_s0008_type2_ts1_Trh1.csv
+/FPcache/patens_Temporal_pattern_t64_stay110_R01_Trh01_a12_m1000_n001_o099_webdocsdat_r8388608_s02_type2_ts5_Trh5.csv
+/FPcache/patens_Temporal_pattern_t64_stay110_R01_Trh01_a12_m1000_n001_o099_webdocsdat_r8388608_s01_type2_ts5_Trh5.csv
+/FPcache/patens_Temporal_pattern_t64_stay110_R01_Trh01_a12_m1000_n001_o099_r8388608_s0008_type2_ts5_Trh5.csv
+/FPcache/patens_Temporal_pattern_t64_stay110_a12_n02_o08_r8388608_s0008_type2_ts5.csv
+/FPcache/patens_Temporal_pattern_t64_stay110_a12_n001_o099_r8388608_s0008_type2_ts5.csv
+/FPcache/patens_Spatial_pattern_t64_stay110_R01_Trh06_a12_m100_n001_o099_webdocsdat_r8388608_s02_type2_ts1_Trh1.csv
+/FPcache/patens_Spatial_pattern_t64_stay110_R01_Trh02_a12_m1000_n001_o099_r8388608_s001_type2_ts1_Trh1.csv
+/FPcache/patens_Spatial_pattern_t64_stay110_R01_Trh01_a12_m100_n001_o099_workloaddat_r8388608_s01_type2_ts1_Trh1.csv
+/FPcache/patens_Spatial_pattern_t64_stay110_R01_Trh01_a12_m100_n001_o099_webdocsdat_r8388608_s021_type2_ts1_Trh1.csv
+/FPcache/patens_Spatial_pattern_t64_stay110_R01_Trh01_a12_m1000_n001_o099_workloaddat_r8388608_s0008_type2_ts1_Trh1.csv
+/FPcache/patens_Spatial_pattern_t64_stay110_R01_Trh01_a12_m1000_n001_o099_webdocsdat_r8388608_s02_type2_ts5_Trh5.csv
+/FPcache/patens_Spatial_pattern_t64_stay110_R01_Trh01_a12_m1000_n001_o099_webdocsdat_r8388608_s01_type2_ts5_Trh5.csv
+/FPcache/patens_Spatial_pattern_t64_stay110_R01_Trh01_a12_m1000_n001_o099_r8388608_s0008_type2_ts5_Trh5.csv
+/FPcache/patens_Spatial_pattern_t64_stay110_a12_n02_o08_r8388608_s0008_type2_ts5.csv
+/FPcache/patens_Spatial_pattern_t64_stay110_a12_n001_o099_r8388608_s0008_type2_ts5.csv
+/FPcache/patens_Mis_pattern_t64_stay110_R01_Trh06_a12_m100_n001_o099_webdocsdat_r8388608_s02_type2_ts1_Trh1.csv
+/FPcache/patens_Mis_pattern_t64_stay110_R01_Trh02_a12_m1000_n001_o099_r8388608_s001_type2_ts1_Trh1.csv
+/FPcache/patens_Mis_pattern_t64_stay110_R01_Trh01_a12_m100_n001_o099_workloaddat_r8388608_s01_type2_ts1_Trh1.csv
+/FPcache/patens_Mis_pattern_t64_stay110_R01_Trh01_a12_m100_n001_o099_webdocsdat_r8388608_s021_type2_ts1_Trh1.csv
+/FPcache/patens_Mis_pattern_t64_stay110_R01_Trh01_a12_m100_n001_o099_webdocsdat_r8388608_s01_type2_ts5_Trh5.csv
+/FPcache/patens_Mis_pattern_t64_stay110_R01_Trh01_a12_m1000_n001_o099_workloaddat_r8388608_s0008_type2_ts1_Trh1.csv
+/FPcache/patens_Mis_pattern_t64_stay110_R01_Trh01_a12_m1000_n001_o099_webdocsdat_r8388608_s02_type2_ts5_Trh5.csv
+/FPcache/patens_Mis_pattern_t64_stay110_R01_Trh01_a12_m1000_n001_o099_webdocsdat_r8388608_s01_type2_ts5_Trh5.csv
+/FPcache/patens_Mis_pattern_t64_stay110_R01_Trh01_a12_m1000_n001_o099_r8388608_s0008_type2_ts5_Trh5.csv
+/FPcache/patens_Mis_pattern_t64_stay110_R01_Trh01_a12_m1000_n001_o099_kosarakdat_r8388608_s0008_type2_ts5_Trh5.csv
+/FPcache/patens_Mis_pattern_t64_stay110_R01_Trh0001_Trh01_a12_m1000_n001_o099_pumsbdat_r4388608_s02_type2_ts5_Trh5.csv
+/FPcache/patens_Mis_pattern_t64_stay110_R01_Trh0001_Trh01_a12_m1000_n001_o099_pumsbdat_r4388608_s004_type2_ts5_Trh5.csv
+/FPcache/patens_Mis_pattern_t64_stay110_R01_Trh0001_Trh01_a12_m1000_n001_o099_pumsbdat_r4388608_s002_type2_ts5_Trh5.csv
+/FPcache/patens_Mis_pattern_t64_stay110_a12_n02_o08_r8388608_s0008_type2_ts5.csv
+/FPcache/patens_Mis_pattern_t64_stay110_a12_n001_o099_r8388608_s0008_type2_ts5.csv
+/FPcache/patens_Hit_pattern_t64_stay110_R01_Trh06_a12_m100_n001_o099_webdocsdat_r8388608_s02_type2_ts1_Trh1.csv
+/FPcache/patens_Hit_pattern_t64_stay110_R01_Trh02_a12_m1000_n001_o099_r8388608_s001_type2_ts1_Trh1.csv
+/FPcache/patens_Hit_pattern_t64_stay110_R01_Trh01_a12_m100_n001_o099_workloaddat_r8388608_s01_type2_ts1_Trh1.csv
+/FPcache/patens_Hit_pattern_t64_stay110_R01_Trh01_a12_m100_n001_o099_webdocsdat_r8388608_s021_type2_ts1_Trh1.csv
+/FPcache/patens_Hit_pattern_t64_stay110_R01_Trh01_a12_m100_n001_o099_webdocsdat_r8388608_s01_type2_ts5_Trh5.csv
+/FPcache/patens_Hit_pattern_t64_stay110_R01_Trh01_a12_m1000_n001_o099_workloaddat_r8388608_s0008_type2_ts1_Trh1.csv
+/FPcache/patens_Hit_pattern_t64_stay110_R01_Trh01_a12_m1000_n001_o099_webdocsdat_r8388608_s02_type2_ts5_Trh5.csv
+/FPcache/patens_Hit_pattern_t64_stay110_R01_Trh01_a12_m1000_n001_o099_webdocsdat_r8388608_s01_type2_ts5_Trh5.csv
+/FPcache/patens_Hit_pattern_t64_stay110_R01_Trh01_a12_m1000_n001_o099_r8388608_s0008_type2_ts5_Trh5.csv
+/FPcache/patens_Hit_pattern_t64_stay110_R01_Trh01_a12_m1000_n001_o099_kosarakdat_r8388608_s0008_type2_ts5_Trh5.csv
+/FPcache/patens_Hit_pattern_t64_stay110_R01_Trh0001_Trh01_a12_m1000_n001_o099_pumsbdat_r4388608_s02_type2_ts5_Trh5.csv
+/FPcache/patens_Hit_pattern_t64_stay110_R01_Trh0001_Trh01_a12_m1000_n001_o099_pumsbdat_r4388608_s004_type2_ts5_Trh5.csv
+/FPcache/patens_Hit_pattern_t64_stay110_R01_Trh0001_Trh01_a12_m1000_n001_o099_pumsbdat_r4388608_s002_type2_ts5_Trh5.csv
+/FPcache/patens_Hit_pattern_t64_stay110_a12_n02_o08_r8388608_s0008_type2_ts5.csv
+/FPcache/patens_Hit_pattern_t64_stay110_a12_n001_o099_r8388608_s0008_type2_ts5.csv
+/FPcache/notpatens_Temporal_pattern_t64_stay110_R01_Trh06_a12_m100_n001_o099_webdocsdat_r8388608_s02_type2_ts1_Trh1.csv
+/FPcache/notpatens_Temporal_pattern_t64_stay110_R01_Trh02_a12_m1000_n001_o099_r8388608_s001_type2_ts1_Trh1.csv
+/FPcache/notpatens_Temporal_pattern_t64_stay110_R01_Trh01_a12_m100_n001_o099_workloaddat_r8388608_s01_type2_ts1_Trh1.csv
+/FPcache/notpatens_Temporal_pattern_t64_stay110_R01_Trh01_a12_m100_n001_o099_webdocsdat_r8388608_s021_type2_ts1_Trh1.csv
+/FPcache/notpatens_Temporal_pattern_t64_stay110_R01_Trh01_a12_m1000_n001_o099_workloaddat_r8388608_s0008_type2_ts1_Trh1.csv
+/FPcache/notpatens_Temporal_pattern_t64_stay110_R01_Trh01_a12_m1000_n001_o099_r8388608_s0008_type2_ts5_Trh5.csv
+/FPcache/notpatens_Temporal_pattern_t64_stay110_a12_n02_o08_r8388608_s0008_type2_ts5.csv
+/FPcache/notpatens_Temporal_pattern_t64_stay110_a12_n001_o099_r8388608_s0008_type2_ts5.csv
+/FPcache/notpatens_Spatial_pattern_t64_stay110_R01_Trh06_a12_m100_n001_o099_webdocsdat_r8388608_s02_type2_ts1_Trh1.csv
+/FPcache/notpatens_Spatial_pattern_t64_stay110_R01_Trh02_a12_m1000_n001_o099_r8388608_s001_type2_ts1_Trh1.csv
+/FPcache/notpatens_Spatial_pattern_t64_stay110_R01_Trh01_a12_m100_n001_o099_workloaddat_r8388608_s01_type2_ts1_Trh1.csv
+/FPcache/notpatens_Spatial_pattern_t64_stay110_R01_Trh01_a12_m100_n001_o099_webdocsdat_r8388608_s021_type2_ts1_Trh1.csv
+/FPcache/notpatens_Spatial_pattern_t64_stay110_R01_Trh01_a12_m1000_n001_o099_workloaddat_r8388608_s0008_type2_ts1_Trh1.csv
+/FPcache/notpatens_Spatial_pattern_t64_stay110_R01_Trh01_a12_m1000_n001_o099_r8388608_s0008_type2_ts5_Trh5.csv
+/FPcache/notpatens_Spatial_pattern_t64_stay110_a12_n02_o08_r8388608_s0008_type2_ts5.csv
+/FPcache/notpatens_Spatial_pattern_t64_stay110_a12_n001_o099_r8388608_s0008_type2_ts5.csv
+/FPcache/frame9_y
+/FPcache/frame9_x
+/FPcache/frame8_y
+/FPcache/frame8_x
+/FPcache/frame7_y
+/FPcache/frame7_x
+/FPcache/frame6_y
+/FPcache/frame6_x
+/FPcache/frame5_y
+/FPcache/frame5_x
+/FPcache/frame4_y
+/FPcache/frame4_x
+/FPcache/frame3_y
+/FPcache/frame3_x
+/FPcache/frame35_x
+/FPcache/frame34_y
+/FPcache/frame34_x
+/FPcache/frame33_y
+/FPcache/frame33_x
+/FPcache/frame32_y
+/FPcache/frame32_x
+/FPcache/frame31_y
+/FPcache/frame31_x
+/FPcache/frame30_y
+/FPcache/frame30_x
+/FPcache/frame2_y
+/FPcache/frame2_x
+/FPcache/frame29_y
+/FPcache/frame29_x
+/FPcache/frame28_y
+/FPcache/frame28_x
+/FPcache/frame27_y
+/FPcache/frame27_x
+/FPcache/frame26_y
+/FPcache/frame26_x
+/FPcache/frame25_y
+/FPcache/frame25_x
+/FPcache/frame24_y
+/FPcache/frame24_x
+/FPcache/frame23_y
+/FPcache/frame23_x
+/FPcache/frame22_y
+/FPcache/frame22_x
+/FPcache/frame21_y
+/FPcache/frame21_x
+/FPcache/frame20_y
+/FPcache/frame20_x
+/FPcache/frame1_y
+/FPcache/frame1_x
+/FPcache/frame19_y
+/FPcache/frame19_x
+/FPcache/frame18_y
+/FPcache/frame18_x
+/FPcache/frame17_y
+/FPcache/frame17_x
+/FPcache/frame16_y
+/FPcache/frame16_x
+/FPcache/frame15_y
+/FPcache/frame15_x
+/FPcache/frame14_y
+/FPcache/frame14_x
+/FPcache/frame13_y
+/FPcache/frame13_x
+/FPcache/frame12_y
+/FPcache/frame12_x
+/FPcache/frame11_y
+/FPcache/frame11_x
+/FPcache/frame10_y
+/FPcache/frame10_x
+/FPcache/fpc_Mis_fpcache_t64_stay110_H4_R01_U6_a12_m1000_n001_o099_r8388608_s0008_type2_ts5.csv
+/FPcache/fpc_Mis_fpcache_t64_stay110_H4_R01_Trh02_U6_a12_m1000_n001_o099_r8388608_s001_type1_ts5_Trh5.csv
+/FPcache/fpc_Mis_fpcache_t64_stay110_H2_R01_U8_a12_m1000_r8388608_s0008_type2_ts5.csv
+/FPcache/fpc_Mis_fpcache_t64_stay110_H2_R01_U8_a12_m1000_n001_o099_r8388608_s0008_type2_ts5.csv
+/FPcache/fpc_Mis_fpcache_t64_stay110_H2_R01_Trh_U8_a12_m1000_n001_o099_r8388608_s0008_type2_ts5_Trh5.csv
+/FPcache/fpc_Mis_fpcache_t64_stay110_H2_R01_Trh0_U8_a12_m1000_n001_o099_r8388608_s001_type2_ts1_Trh1.csv
+/FPcache/fpc_Mis_fpcache_t64_stay110_H2_R01_Trh02_U8_a12_m100_n001_o099_webdocsdat_r8388608_s02_type2_ts1_Trh1.csv
+/FPcache/fpc_Mis_fpcache_t64_stay110_H2_R01_Trh01_U8_a12_m1000_n001_o099_webdocsdat_r8388608_s02_type2_ts1_Trh1.csv
+/FPcache/fpc_Mis_fpcache_t64_stay110_H2_R01_Trh01_U8_a12_m1000_n001_o099_r8388608_s001_type2_ts1_Trh1.csv
+/FPcache/fpc_Mis_fpcache_t64_stay110_H2_R01_Trh01_U8_a12_m1000_n001_o099_r8388608_s0008_type2_ts5_Trh5.csv
+/FPcache/fpc_Mis_fpcache_t64_stay110_H2_R01_Trh01_U8_a12_m1000_n0001_o0999_kosarakdat_r8388608_s0008_type2_ts1_Trh1.csv
+/FPcache/fpc_Mis_fpcache_t64_stay110_H2_R01_Trh01_U8_a12_m1000_n000001_o099999_kosarakdat_r8388608_s0008_type2_ts10_Trh10.csv
+/FPcache/fpc_Hit_fpcache_t64_stay110_H4_R01_U6_a12_m1000_n001_o099_r8388608_s0008_type2_ts5.csv
+/FPcache/fpc_Hit_fpcache_t64_stay110_H4_R01_Trh02_U6_a12_m1000_n001_o099_r8388608_s001_type1_ts5_Trh5.csv
+/FPcache/fpc_Hit_fpcache_t64_stay110_H2_R01_U8_a12_m1000_r8388608_s0008_type2_ts5.csv
+/FPcache/fpc_Hit_fpcache_t64_stay110_H2_R01_U8_a12_m1000_n001_o099_r8388608_s0008_type2_ts5.csv
+/FPcache/fpc_Hit_fpcache_t64_stay110_H2_R01_Trh_U8_a12_m1000_n001_o099_r8388608_s0008_type2_ts5_Trh5.csv
+/FPcache/fpc_Hit_fpcache_t64_stay110_H2_R01_Trh0_U8_a12_m1000_n001_o099_r8388608_s001_type2_ts1_Trh1.csv
+/FPcache/fpc_Hit_fpcache_t64_stay110_H2_R01_Trh02_U8_a12_m100_n001_o099_webdocsdat_r8388608_s02_type2_ts1_Trh1.csv
+/FPcache/fpc_Hit_fpcache_t64_stay110_H2_R01_Trh01_U8_a12_m1000_n001_o099_webdocsdat_r8388608_s02_type2_ts1_Trh1.csv
+/FPcache/fpc_Hit_fpcache_t64_stay110_H2_R01_Trh01_U8_a12_m1000_n001_o099_r8388608_s001_type2_ts1_Trh1.csv
+/FPcache/fpc_Hit_fpcache_t64_stay110_H2_R01_Trh01_U8_a12_m1000_n001_o099_r8388608_s0008_type2_ts5_Trh5.csv
+/FPcache/fpc_Hit_fpcache_t64_stay110_H2_R01_Trh01_U8_a12_m1000_n0001_o0999_kosarakdat_r8388608_s0008_type2_ts1_Trh1.csv
+/FPcache/fpc_Hit_fpcache_t64_stay110_H2_R01_Trh01_U8_a12_m1000_n000001_o099999_kosarakdat_r8388608_s0008_type2_ts10_Trh10.csv
+/FPcache/fpcache_t64_stay110_H4_R01_U6_a12_m1000_n001_o099_r8388608_s0008_type2_ts5.csv
+/FPcache/fpcache_t64_stay110_H4_R01_Trh02_U6_a12_m1000_n001_o099_r8388608_s001_type1_ts5_Trh5.csv
+/FPcache/fpcache_t64_stay110_H2_R01_U8_a12_m1000_r8388608_s0008_type2_ts5.csv
+/FPcache/fpcache_t64_stay110_H2_R01_U8_a12_m1000_n001_o099_r8388608_s0008_type2_ts5.csv
+/FPcache/fpcache_t64_stay110_H2_R01_Trh_U8_a12_m1000_n001_o099_r8388608_s0008_type2_ts5_Trh5.csv
+/FPcache/fpcache_t64_stay110_H2_R01_Trh0_U8_a12_m1000_n001_o099_r8388608_s001_type2_ts1_Trh1.csv
+/FPcache/fpcache_t64_stay110_H2_R01_Trh02_U8_a12_m100_n001_o099_webdocsdat_r8388608_s02_type2_ts1_Trh1.csv
+/FPcache/fpcache_t64_stay110_H2_R01_Trh01_U8_a12_m1000_n001_o099_webdocsdat_r8388608_s02_type2_ts1_Trh1.csv
+/FPcache/fpcache_t64_stay110_H2_R01_Trh01_U8_a12_m1000_n001_o099_r8388608_s001_type2_ts1_Trh1.csv
+/FPcache/fpcache_t64_stay110_H2_R01_Trh01_U8_a12_m1000_n001_o099_r8388608_s0008_type2_ts5_Trh5.csv
+/FPcache/fpcache_t64_stay110_H2_R01_Trh01_U8_a12_m1000_n0001_o0999_kosarakdat_r8388608_s0008_type2_ts1_Trh1.csv
+/FPcache/fpcache_t64_stay110_H2_R01_Trh01_U8_a12_m1000_n000001_o099999_kosarakdat_r8388608_s0008_type2_ts10_Trh10.csv
+/FPcache/workload.dat
+/FPcache/webdocs.dat
