--- a/.gitignore
+++ b/.gitignore
@@ -492,3 +492,25 @@ __pycache__/
 /FPcache/fpcache_t64_stay110_H2_R01_Trh01_U8_a12_m1000_n000001_o099999_kosarakdat_r8388608_s0008_type2_ts10_Trh10.csv
 /FPcache/workload.dat
 /FPcache/webdocs.dat
+/FPcache/fpc_Mis_fpcache_t64_stay110_H4_R01_Trh005_U4_a17_m1000_n001_o099_kosarakdat_r8388608_s0008_type2_ts1_Trh1.csv
+/FPcache/fpc_Mis_fpcache_t64_stay110_H4_R01_Trh005_U4_a17_m1000_n001_o099_kosarakdat_r8388608_s0007_type2_ts1_Trh1.csv
+/FPcache/fpc_Mis_fpcache_t64_stay110_H4_R01_Trh005_U4_a12_m1000_n001_o099_kosarakdat_r8388608_s0008_type2_ts1_Trh1.csv
+/FPcache/fpc_Mis_fpcache_t64_stay110_H4_R01_Trh005_U4_a12_m1000_n001_o099_kosarakdat_r8388608_s0007_type2_ts1_Trh1.csv
+/FPcache/fpc_Hit_fpcache_t64_stay110_H4_R01_Trh005_U4_a17_m1000_n001_o099_kosarakdat_r8388608_s0008_type2_ts1_Trh1.csv
+/FPcache/fpc_Hit_fpcache_t64_stay110_H4_R01_Trh005_U4_a17_m1000_n001_o099_kosarakdat_r8388608_s0007_type2_ts1_Trh1.csv
+/FPcache/fpc_Hit_fpcache_t64_stay110_H4_R01_Trh005_U4_a12_m1000_n001_o099_kosarakdat_r8388608_s0008_type2_ts1_Trh1.csv
+/FPcache/fpc_Hit_fpcache_t64_stay110_H4_R01_Trh005_U4_a12_m1000_n001_o099_kosarakdat_r8388608_s0007_type2_ts1_Trh1.csv
+/FPcache/fpcache_t64_stay110_H4_R01_Trh005_U4_a17_m1000_n001_o099_kosarakdat_r8388608_s0008_type2_ts1_Trh1.csv
+/FPcache/fpcache_t64_stay110_H4_R01_Trh005_U4_a17_m1000_n001_o099_kosarakdat_r8388608_s0007_type2_ts1_Trh1.csv
+/FPcache/fpcache_t64_stay110_H4_R01_Trh005_U4_a12_m1000_n001_o099_kosarakdat_r8388608_s0008_type2_ts1_Trh1.csv
+/FPcache/fpcache_t64_stay110_H4_R01_Trh005_U4_a12_m1000_n001_o099_kosarakdat_r8388608_s0007_type2_ts1_Trh1.csv
+/FPcache/pattern_t64_stay110_H3_R01_Trh005_U6_a12_m1000_n001_o099_kosarakdat_r8388608_s0008_type2_ts1_Trh1.csv
+/FPcache/pattern_t64_stay110_H3_R01_Trh004_U6_a12_m1000_n001_o099_kosarakdat_r8388608_s0008_type2_ts1_Trh1.csv
+/FPcache/patens_Temporal_pattern_t64_stay110_H3_R01_Trh005_U6_a12_m1000_n001_o099_kosarakdat_r8388608_s0008_type2_ts1_Trh1.csv
+/FPcache/patens_Spatial_pattern_t64_stay110_H3_R01_Trh005_U6_a12_m1000_n001_o099_kosarakdat_r8388608_s0008_type2_ts1_Trh1.csv
+/FPcache/patens_Mis_pattern_t64_stay110_H3_R01_Trh005_U6_a12_m1000_n001_o099_kosarakdat_r8388608_s0008_type2_ts1_Trh1.csv
+/FPcache/patens_Mis_pattern_t64_stay110_H3_R01_Trh004_U6_a12_m1000_n001_o099_kosarakdat_r8388608_s0008_type2_ts1_Trh1.csv
+/FPcache/patens_Hit_pattern_t64_stay110_H3_R01_Trh005_U6_a12_m1000_n001_o099_kosarakdat_r8388608_s0008_type2_ts1_Trh1.csv
+/FPcache/patens_Hit_pattern_t64_stay110_H3_R01_Trh004_U6_a12_m1000_n001_o099_kosarakdat_r8388608_s0008_type2_ts1_Trh1.csv
+/FPcache/notpatens_Temporal_pattern_t64_stay110_H3_R01_Trh005_U6_a12_m1000_n001_o099_kosarakdat_r8388608_s0008_type2_ts1_Trh1.csv
+/FPcache/notpatens_Spatial_pattern_t64_stay110_H3_R01_Trh005_U6_a12_m1000_n001_o099_kosarakdat_r8388608_s0008_type2_ts1_Trh1.csv
