--- a/FPcache/FPcache.vcxproj
+++ b/FPcache/FPcache.vcxproj
@@ -122,6 +122,7 @@
     <ClCompile Include="common.cpp" />
     <ClCompile Include="fpcache.cpp" />
     <ClCompile Include="fptree.cpp" />
+    <ClCompile Include="lowCache.cpp" />
     <ClCompile Include="lru.cpp" />
     <ClCompile Include="RR.cpp" />
     <ClCompile Include="tools.cpp" />
@@ -135,6 +136,7 @@
     <ClInclude Include="fpcache.hpp" />
     <ClInclude Include="fpgrowth.h" />
     <ClInclude Include="fptree.hpp" />
+    <ClInclude Include="lowCache.h" />
     <ClInclude Include="lru.hpp" />
     <ClInclude Include="RR.h" />
     <ClInclude Include="transactions.h" />
