--- a/FPcache/FPcache.vcxproj
+++ b/FPcache/FPcache.vcxproj
@@ -120,24 +120,41 @@
     <ClCompile Include="ARCCache.cpp" />
     <ClCompile Include="cache.cpp" />
     <ClCompile Include="common.cpp" />
+    <ClCompile Include="config.cpp" />
     <ClCompile Include="fpcache.cpp" />
     <ClCompile Include="fptree.cpp" />
+    <ClCompile Include="LFUCache.cpp" />
+    <ClCompile Include="LIRSCache.cpp" />
     <ClCompile Include="lowCache.cpp" />
     <ClCompile Include="lru.cpp" />
+    <ClCompile Include="LRUKCache.cpp" />
+    <ClCompile Include="MQCache.cpp" />
     <ClCompile Include="RR.cpp" />
     <ClCompile Include="tools.cpp" />
     <ClCompile Include="transactions.cpp" />
     <ClCompile Include="utility.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="arc.h" />
     <ClInclude Include="ARCCache.h" />
     <ClInclude Include="cache.h" />
     <ClInclude Include="common.h" />
+    <ClInclude Include="config.h" />
+    <ClInclude Include="defs.h" />
     <ClInclude Include="fpcache.hpp" />
     <ClInclude Include="fpgrowth.h" />
     <ClInclude Include="fptree.hpp" />
+    <ClInclude Include="lfu.h" />
+    <ClInclude Include="LFUCache.h" />
+    <ClInclude Include="lirs.h" />
+    <ClInclude Include="LIRSCache.h" />
     <ClInclude Include="lowCache.h" />
+    <ClInclude Include="lru.h" />
     <ClInclude Include="lru.hpp" />
+    <ClInclude Include="LRUKCache.h" />
+    <ClInclude Include="lru_K.h" />
+    <ClInclude Include="mq.h" />
+    <ClInclude Include="MQCache.h" />
     <ClInclude Include="RR.h" />
     <ClInclude Include="transactions.h" />
     <ClInclude Include="util.h" />
