--- a/.gitignore
+++ b/.gitignore
@@ -514,3 +514,36 @@ __pycache__/
 /FPcache/patens_Hit_pattern_t64_stay110_H3_R01_Trh004_U6_a12_m1000_n001_o099_kosarakdat_r8388608_s0008_type2_ts1_Trh1.csv
 /FPcache/notpatens_Temporal_pattern_t64_stay110_H3_R01_Trh005_U6_a12_m1000_n001_o099_kosarakdat_r8388608_s0008_type2_ts1_Trh1.csv
 /FPcache/notpatens_Spatial_pattern_t64_stay110_H3_R01_Trh005_U6_a12_m1000_n001_o099_kosarakdat_r8388608_s0008_type2_ts1_Trh1.csv
+/FPcache/LRUK_Mis_fpcache_t64_stay110_H5_R01_Trh005_U1_a12_m1000_n02_o08_workloaddat_r256_s0005_type2_ts1_Trh1.csv
+/FPcache/LRUK_Hit_fpcache_t64_stay110_H5_R01_Trh005_U1_a12_m1000_n02_o08_workloaddat_r256_s0005_type2_ts1_Trh1.csv
+/FPcache/Info_fpcache_t64_stay110_H7_R01_Trh005_U1_a12_m1000_n001_o099_workload_webdevdat_r256_s0006_type2_ts1_Trh1.csv
+/FPcache/Info_fpcache_t64_stay110_H3_R05_Trh005_U1_a12_m5000_n001_o099_workload_webdevdat_r128_s00018_type3_ts1_Trh1.csv
+/FPcache/Info_fpcache_t64_stay110_H3_R05_Trh005_U1_a12_m5000_n001_o099_workload_webdevdat_r128_s00018_type2_ts1_Trh1.csv
+/FPcache/Info_fpcache_t64_stay110_H3_R05_Trh005_U1_a12_m5000_n001_o099_workload_webdevdat_r128_s00016_type2_ts1_Trh1.csv
+/FPcache/Info_fpcache_t64_stay110_H3_R01_Trh005_U1_a10_m1000_n001_o099_workload_webdevdat_r128_s0005_type2_ts1_Trh1.csv
+/FPcache/Info_fpcache_t64_stay110_H3_R01_Trh005_U1_a10_m1000_n001_o099_workload_tagdat_r128_s0005_type2_ts1_Trh1.csv
+/FPcache/Info_fpcache_t64_stay110_H3_R01_Trh005_U1_a069_m1000_n001_o099_workload_tagdat_r128_s0007_type3_ts1_Trh1.csv
+/FPcache/Info_fpcache_t64_stay110_H3_R01_Trh005_U1_a069_m1000_n001_o099_workload_tagdat_r128_s0006_type3_ts1_Trh1.csv
+/FPcache/fpc_Mis_fpcache_t64_stay110_H5_R01_Trh005_U1_a12_m1000_n02_o08_workloaddat_r256_s0005_type2_ts1_Trh1.csv
+/FPcache/fpc_Mis_fpcache_t64_stay110_H5_R01_Trh005_U1_a12_m1000_n001_o099_Dataset3dat_r64_s0004_type2_ts1_Trh1.csv
+/FPcache/fpc_Mis_fpcache_t64_stay110_H5_R01_Trh0005_U1_a12_m1000_n001_o099_Dataset3dat_r512_s0004_type2_ts1_Trh1.csv
+/FPcache/fpc_Hit_fpcache_t64_stay110_H5_R01_Trh005_U1_a12_m1000_n02_o08_workloaddat_r256_s0005_type2_ts1_Trh1.csv
+/FPcache/fpc_Hit_fpcache_t64_stay110_H5_R01_Trh005_U1_a12_m1000_n001_o099_Dataset3dat_r64_s0004_type2_ts1_Trh1.csv
+/FPcache/fpc_Hit_fpcache_t64_stay110_H5_R01_Trh0005_U1_a12_m1000_n001_o099_Dataset3dat_r512_s0004_type2_ts1_Trh1.csv
+/FPcache/fpcache_t64_stay110_H7_R01_Trh005_U1_a12_m1000_n001_o099_workload_webdevdat_r256_s0006_type2_ts1_Trh1.csv
+/FPcache/fpcache_t64_stay110_H5_R01_Trh005_U1_a12_m1000_n02_o08_workloaddat_r256_s0005_type2_ts1_Trh1.csv
+/FPcache/fpcache_t64_stay110_H5_R01_Trh005_U1_a12_m1000_n001_o099_Dataset3dat_r64_s0004_type2_ts1_Trh1.csv
+/FPcache/fpcache_t64_stay110_H5_R01_Trh0005_U1_a12_m1000_n001_o099_Dataset3dat_r512_s0004_type2_ts1_Trh1.csv
+/FPcache/fpcache_t64_stay110_H3_R05_Trh005_U1_a12_m5000_n001_o099_workload_webdevdat_r128_s00018_type3_ts1_Trh1.csv
+/FPcache/fpcache_t64_stay110_H3_R05_Trh005_U1_a12_m5000_n001_o099_workload_webdevdat_r128_s00018_type2_ts1_Trh1.csv
+/FPcache/fpcache_t64_stay110_H3_R05_Trh005_U1_a12_m5000_n001_o099_workload_webdevdat_r128_s00016_type2_ts1_Trh1.csv
+/FPcache/fpcache_t64_stay110_H3_R01_Trh005_U1_a10_m1000_n001_o099_workload_webdevdat_r128_s0005_type2_ts1_Trh1.csv
+/FPcache/fpcache_t64_stay110_H3_R01_Trh005_U1_a10_m1000_n001_o099_workload_tagdat_r128_s0005_type2_ts1_Trh1.csv
+/FPcache/fpcache_t64_stay110_H3_R01_Trh005_U1_a069_m1000_n001_o099_workload_tagdat_r128_s0007_type3_ts1_Trh1.csv
+/FPcache/fpcache_t64_stay110_H3_R01_Trh005_U1_a069_m1000_n001_o099_workload_tagdat_r128_s0006_type3_ts1_Trh1.csv
+/TRANSACTION/output
+/TRANSACTION/out.dat
+/TRANSACTION/out'
+/TRANSACTION/out
+/TRANSACTION/o
+/TRANSACTION/io
